Entity / Entities generation (#33)
* Creation of the entity generator
Detecting and loading jhipster project conf
Generating first model class

* Entity model generation ok

* All files for entities presents and OKAY

* Adding needle for import and routes in app.dart

* Routes, mappers, keys OK
Fixing bug for entity name

* Integrate change of the main generator for the entity generator
Drawer menu generation for the menu

* Adding entities generator for generator all entities in one command line

* Fixing folder problem when invoking the generator in jhipster folder
Fixing I18n problem
Buid list field correctly

* Check the right directory

* Cleaning the code

* Units test for entity generator

* Linting fixing

* Remove unecessary dependencies

* Integration of entity CRUD :
- Bloc OK

* Integrating view and code in the main generator for entities

* Fix bugs, Enum handles

* Fix non i18n entity

* FIx datetime problem without I18n

* Bugfixes, naming, etc

* Adding boolean support for entity CRUD
Fix name colision in bloc

* Bug fixes and improvements

* Refactor model template for entity

* Fixing refactore model bugs

* Fix linting

* More timeout

* Fixing CI test

* Debug test in CI

* Debug  CI

* Debug CI

* Debug CI

* Fix CI tests

* Complete unit tests

* Normalize URL for OS

--- a/generators/app/templates/flutter/flutter-app/lib/app.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/app.dart.ejs
@@ -10,6 +10,7 @@ import 'package:flutter/material.dart';
 import 'package:<%= baseName %>/shared/repository/account_repository.dart';
 import 'package:<%= baseName %>/themes.dart';
 import 'account/settings/bloc/settings_bloc.dart';
+import 'package:<%= baseName %>/shared/models/entity_arguments.dart';
 
 import 'account/login/login_screen.dart';
 import 'account/register/register_screen.dart';
@@ -18,6 +19,8 @@ import 'account/register/register_screen.dart';
 import 'package:flutter_localizations/flutter_localizations.dart';
 import 'generated/l10n.dart';
 <%_ } _%>
+
+// jhipster-merlin-needle-import-add - JHipster will add new imports here
 
 class <%= camelizedUpperFirstBaseName %>App extends StatelessWidget {
   const <%= camelizedUpperFirstBaseName %>App({Key key}) : super(key: key);
@@ -50,6 +53,7 @@ class <%= camelizedUpperFirstBaseName %>App extends StatelessWidget {
             ..add(LoadCurrentUser()),
           child: SettingsScreen());
         },
+        // jhipster-merlin-needle-route-add - JHipster will add new routes here
       },
       <%_ if (enableTranslation) { _%>
         localizationsDelegates: [
