--- a/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
+++ b/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
@@ -14,7 +14,7 @@ description: <%= baseName %> flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 < 3.0.0"
+  sdk: "2.10.1"
 
 dependencies:
   flutter:
@@ -23,23 +23,23 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 <%_ } _%>
-  cupertino_icons: 0.1.3
-  http: 0.12.1
-  dart_json_mapper: 1.5.18
-  dart_json_mapper_flutter: 1.0.0
-  flutter_secure_storage: 3.3.3
-  url_launcher: 5.4.11
+  cupertino_icons: 1.0.0
+  http: 0.12.2
+  dart_json_mapper: 1.6.3
+  dart_json_mapper_flutter: 1.0.2
+  flutter_secure_storage: 3.3.5
+  url_launcher: 5.7.2
   datetime_picker_formfield: 1.0.0
 
   #BLoC pattern related
-  formz: 0.2.0
-  equatable: 1.2.2
-  flutter_bloc: 5.0.1
+  formz: 0.3.2
+  equatable: 1.2.5
+  flutter_bloc: 6.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 1.10.0
+  build_runner: 1.10.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
