--- a/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
+++ b/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
@@ -14,7 +14,7 @@ description: <%= baseName %> flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: "2.10.1"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
