Finalize externalizing routes Fix problem of serializing list with new dart json mapper

--- a/generators/app/templates/flutter/flutter-app/lib/shared/widgets/drawer/drawer_widget.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/shared/widgets/drawer/drawer_widget.dart.ejs
@@ -6,6 +6,8 @@ import 'package:<%= baseName %>/routes.dart';
 import 'package:<%= baseName %>/shared/widgets/drawer/bloc/drawer_bloc.dart';
 import 'package:flutter/material.dart';
 
+// jhipster-merlin-needle-menu-import-entry-add
+
 class <%= camelizedUpperFirstBaseName %>Drawer extends StatelessWidget {
    <%= camelizedUpperFirstBaseName %>Drawer({Key key}) : super(key: key);
 
