--- a/generators/app/templates/flutter/flutter-app/lib/main.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main.dart.ejs
@@ -2,6 +2,7 @@ import 'package:<%= baseName %>/environment.dart';
 import 'package:flutter/material.dart';
 import 'app.dart';
 import 'main.mapper.g.dart' show initializeJsonMapper;
+import 'mapper.dart';
 
 <%_ if (!enableTranslation) { _%>
   import 'package:intl/intl.dart';
@@ -11,6 +12,7 @@ import 'main.mapper.g.dart' show initializeJsonMapper;
 void main() {
   Constants.setEnvironment(Environment.DEV);
   initializeJsonMapper();
+  configMapper();
   <%_ if (!enableTranslation) { _%>
   Intl.defaultLocale = "en";
   initializeDateFormatting();
