--- a/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
+++ b/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
@@ -14,7 +14,7 @@ description: <%= baseName %> flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,23 +23,30 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 <%_ } _%>
-  cupertino_icons: 1.0.0
-  http: 0.12.2
-  dart_json_mapper: 1.6.4
-  dart_json_mapper_flutter: 1.0.2
-  flutter_secure_storage: 3.3.5
-  url_launcher: 5.7.2
-  datetime_picker_formfield: 1.0.0
+  cupertino_icons: 1.0.2
+  http: 0.13.0
+  dart_json_mapper: 1.7.12
+  dart_json_mapper_flutter: 1.0.3
+  flutter_secure_storage: 4.1.0
+  url_launcher: 6.0.2
+  datetime_picker_formfield: 2.0.0
 
   #BLoC pattern related
   formz: 0.3.2
-  equatable: 1.2.5
-  flutter_bloc: 6.0.6
+  equatable: 2.0.0
+  flutter_bloc: 6.1.3
+
+dependency_overrides:
+  glob: 2.0.0
+  reflectable: 3.0.0-nullsafety.1
+<%_ if (enableTranslation) { _%>
+  intl: 0.17.0
+<%_ } _%>
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 1.10.3
+  build_runner: 1.11.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
